<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/discover_settings"
            android:checked="false"
            android:title="@string/discovery_settings" />
        <item
            android:id="@+id/app_settings"
            android:checked="false"
            android:title="@string/app_settings" />
        <item
            android:id="@+id/help"
            android:checked="false"
            android:title="@string/help" />
        <item
            android:id="@+id/feedback"
            android:checked="false"
            android:title="@string/feedback" />
        <item
            android:id="@+id/tinder_plus"
            android:checked="false"
            android:title="@string/tinder_plus" />
    </group>
</menu>